# agent-bark-notify

./: .clawhubignore  .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: clawhub-publish.yml
agents/: openai.yaml
examples/: agents.json.example  bark-notify.env.example
scripts/: bark-notify.py
skills/bark-notify/: SKILL.md
src/agent_bark_notify/: __init__.py  cli.py
tests/: test_cli.py
