[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bark-notify"
version = "0.1.0"
description = "Agent-aware Bark notification CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Lumen" }]
keywords = ["bark", "notifications", "agent", "codex", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications",
  "Topic :: Utilities",
]

[project.scripts]
bark-notify = "agent_bark_notify.cli:main"

